fix: btn hover color to make it visible on hover for input, body and product components

--- a/src/app/component/body/body.component.css
+++ b/src/app/component/body/body.component.css
@@ -15,7 +15,6 @@
 }
 
 a:hover {
-  color: #3d826d;
   cursor: pointer;
 }
 
