--- a/src/app/component/input/inputs/inputs.component.css
+++ b/src/app/component/input/inputs/inputs.component.css
@@ -10,16 +10,13 @@
 
 .btn-primary {
   background-color: #3d826d;
-  /* border to color to tranparent */
   border-color: transparent;
 }
 
 a{
-  color: #3d826d;
   cursor: pointer;
 }
 a:hover{
   transform: translateY(-8px);
-  /* slow transiation */
   transition: all 1s;
 }
