--- a/src/app/component/products/products/products.component.css
+++ b/src/app/component/products/products/products.component.css
@@ -16,11 +16,9 @@ i{
 }
 
 a{
-  color: #3d826d;
   cursor: pointer;
 }
 a:hover{
   transform: translateY(-8px);
-  /* slow transiation */
   transition: all 1s;
 }
